fixed alignment issues

--- a/css/hero.css
+++ b/css/hero.css
@@ -22,7 +22,7 @@
 .hero-section {
     display: flex;
     justify-content: center;
-    min-height: calc(100dvh - 98px);
+    min-height: calc(100dvh - 120px);
     padding-top: 0
 }
 
@@ -79,9 +79,10 @@
     margin: 0;
 }
 
-.hero-heading h1 {
-    max-width: 10ch;
+.hero-heading h2 {
     line-height: 100px;
+    margin: 0;
+    padding: 0;
 }
 
 .hero-description {
